# Wormy-ML-Network-Worm

./: CHANGELOG.md  FIXES_APPLIED.md  PLAN.md  README.md  cli.py  config_lab.yaml  docker-compose-lab-expanded.yml  docker-compose-lab.yml  pyproject.toml  requirements-lock.txt  requirements.txt  run_lab.sh  worm_core.py
attacks/: __init__.py  network_attacks.py  supply_chain.py  usb_attacks.py
c2/: __init__.py  client.py  cloud_c2.py  dga.py  email_c2.py  icmp_tunnel.py  mqtt_c2.py  multi_protocol_c2.py  pfs_crypto.py  resilient_c2.py  server.py  ssh_tunnel_c2.py
configs/: config.py  config.yaml  config_msf.yaml
core/: adaptive_cycle.py  adaptive_rate_limiter.py  advanced_self_healing.py  agent_controller.py  database.py  distributed_redundancy.py  dormant_cells.py  exploit_chaining.py  knowledge_graph.py  performance_benchmark.py  plugin_system.py  predictive_recon.py  self_healing.py  state_persistence.py  wave_propagation.py
docker-lab/: Dockerfile.log4j  Dockerfile.struts  Log4jServlet.java  mosquitto.conf  web.xml
evasion/: __init__.py  advanced_evasion.py  advanced_polymorphic.py  anti_forensics.py  direct_syscalls.py  edr_bypass.py  enterprise_evasion.py  evasion_model.py  ids_detector.py  ids_evasion.py  ja3_spoof.py  memory_execution.py  polymorphic_engine.py  semantic_polymorphism.py  sleep_obfuscation.py  stealth_engine.py  traffic_mimicry.py
exploits/: __init__.py  active_directory.py  adaptive_exploit_selector.py  async_exploit.py  brute_force_engine.py  contextual_bandit.py  credential_manager.py  enterprise_password_engine.py  exploit_engine.py  exploit_manager.py  exploitation_chain.py  fuzzing_engine.py  metasploit_client.py
infection/: __init__.py  enhanced_infection.py
kernel/: README.md
ml_models/: __init__.py  train_evasion_model.py  train_host_classifier.py  train_rl_agent.py
monitoring/: __init__.py  armitage_dashboard.py  cli_monitor.py  credential_dashboard.py  dashboard.py  host_monitor.py  multi_operator.py  web_dashboard.py
payloads/: payload_generator.py  payload_manager.py  specialized_payloads.py
post_exploit/: __init__.py  cloud_attacks.py  credential_dumping.py  data_exfiltration.py  dcom_lateral.py  lateral_movement.py  local_persistence.py  payload_deployer.py  privilege_escalation.py  remote_persistence.py  vss_ntds.py
rl_engine/: __init__.py  dqn_agent.py  environment.py  propagation_agent.py  replay_memory.py  wrapper.py
(+99 files in other folders)
